# Attendance

./: .gitignore  app.py  generate_docx_invoices.py  generate_output.py  pyproject.toml  requirements.txt  vercel.json
api/: app.py  generate_output.py  generate_pdf_invoices.py
