[project]
name = "attendance"
version = "1.0.0"
description = "Attendance Management System"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.0.0",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
app = "app:main"

[tool.uv]
package = false
